fix: add target tag

--- a/action.yml
+++ b/action.yml
@@ -51,5 +51,5 @@ runs:
       shell: bash
     - if: inputs.task-path == ''
       name: Run ecs-task-def container diff
-      run: cmd ecs-task-def --container-name ${{ inputs.container-name }} --container-path ${{ inputs.container-path }} --github-email ${{ inputs.github-email }} --github-owner ${{ inputs.github-owner }} --github-repository ${{ inputs.github-repository }} --github-token ${{ inputs.github-token }} --github-url ${{ inputs.github-url }} --github-username ${{ inputs.github-username }}
+      run: cmd ecs-task-def --container-name ${{ inputs.container-name }} --container-path ${{ inputs.container-path }} --github-email ${{ inputs.github-email }} --github-owner ${{ inputs.github-owner }} --github-repository ${{ inputs.github-repository }} --github-token ${{ inputs.github-token }} --github-url ${{ inputs.github-url }} --github-username ${{ inputs.github-username }} --target-tag ${{ inputs.target-tag }}
       shell: bash
